# tatok

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
tatok/: __init__.py  config.py  exceptions.py  lang.py  ngrams.py  segments.py  stems.py  tatok.py  tokens.py
tests/: test_lang.py  test_stemmer.py  test_tatok.py  test_tokenizer.py
