[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tatok"
version = "0.0.4"
description = "A multilingual text analyzer for the Tatoeba Corpus"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "L.Beaudoux" }
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta"
]
dependencies = [
  "iso639-lang>=2.6.3",
  "PyStemmer>=3.0.0",
  "wordfreq[cjk]>=3.1.1"
]

[project.urls]
Homepage = "https://github.com/LBeaudoux/tatok"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["tatok"]
